# make87-rust

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: provider.rs  publisher.rs  querier.rs  queryable.rs  requester.rs  subscriber.rs
schemas/: application_env_config.openapi.json
src/: application_config.rs  config.rs  endpoints.rs  errors.rs  lib.rs  peripherals.rs  session.rs  storage.rs  topics.rs  utils.rs
src/encodings/: json.rs  mod.rs  protobuf.rs  yaml.rs
src/handlers/: logging.rs  stderr.rs  stdout.rs
src/interfaces/: mod.rs
src/interfaces/rerun/: interface.rs  mod.rs  model.rs
src/interfaces/zenoh/: interface.rs  mod.rs  model.rs
src/internal/models/: application_env_config.rs  mod.rs
src/models/: mod.rs
src/peripherals/: base.rs  camera.rs  codec.rs  generic_device.rs  gpio.rs  gpu.rs  i2c.rs  isp.rs  mod.rs  other.rs  real_sense.rs  rendering.rs
tests/integration/: mod.rs
tests/integration/rerun/: mod.rs  test_client_server.rs
tests/integration/zenoh/: mod.rs  test_pub_sub.rs  test_req_prv.rs
