[package]
name = "make87"
version = "0.0.0"
authors = ["Nisse Knudsen <nisse@make87.com>", "Phillip Thomas <phillip@make87.com>"]
edition = "2021"
homepage = "https://www.make87.com"
repository = "https://github.com/make87/make87-rust"
license-file = "LICENSE"
description = "Rust SDK for make87 platform."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.12"
tokio = { version = "1.42.0" }
zenoh = { version = "1.4.0", features = ["unstable"], optional = true }
prost = { version = "0.13.5" , optional = true}
serde_yaml = {  version = "0.9.33", optional = true }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[features]
zenoh = ["dep:zenoh"]
protobuf = ["dep:prost"]
yaml = ["dep:serde_yaml"]
