[package]
name = "make87"
version = "0.0.0"
authors = ["Nisse Knudsen <nisse@make87.com>", "Phillip Thomas <phillip@make87.com>"]
edition = "2021"
homepage = "https://www.make87.com"
repository = "https://github.com/make87/make87-rust"
license-file = "LICENSE"
description = "Rust SDK for make87 platform."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.12"
tokio = { version = "1.42.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
zenoh = { version = "1.4.0", features = ["unstable"], optional = true }
prost = { version = "0.13.5" , optional = true}
serde_yaml = {  version = "0.9.33", optional = true }
aws-config =  { version = "1.5.18", optional = true }
aws-sdk-s3 = { version = "1.78.0", optional = true }
aws-credential-types = { version = "1.2.3", optional = true, features = ["hardcoded-credentials"] }
make87_messages = { version = "*", optional = true }

[features]
zenoh = ["dep:zenoh"]
protobuf = ["dep:prost"]
yaml = ["dep:serde_yaml"]
storage = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types"]
make87_messages = ["dep:make87_messages"]
