[package]
name = "make87"
version = "0.0.0"
authors = ["Nisse Knudsen <nisse@make87.com>", "Phillip Thomas <phillip@make87.com>"]
edition = "2021"
homepage = "https://www.make87.com"
repository = "https://github.com/make87/make87-rust"
license-file = "LICENSE"
description = "Rust SDK for make87 platform."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["time", "rt", "rt-multi-thread", "macros"] }
zenoh = { version = "1.5.0", features = ["shared-memory", "unstable"], optional = true }
prost = { version = "0.13.5", optional = true}
serde_yaml = {  version = "0.9.33", optional = true }
aws-config =  { version = "1.8.5", optional = true }
aws-sdk-s3 = { version = "1.103.0", optional = true }
aws-credential-types = { version = "1.2.5", optional = true, features = ["hardcoded-credentials"] }
make87_messages = { version = "0.2.8", optional = true }
regex = "1.11.1"
once_cell = "1.21.3"
rerun = { version = "0.24.1", optional = true }
uuid = { version = "1.18.0", features = ["v4"], optional = true }
sha2 = { version = "0.10.9", optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[features]
zenoh = ["dep:zenoh"]
protobuf = ["dep:prost"]
yaml = ["dep:serde_yaml"]
storage = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types"]
make87_messages = ["dep:make87_messages"]
rerun = ["dep:rerun", "dep:uuid", "dep:sha2"]
